# prosaasil

./: .dockerignore  .env.asterisk.example  .env.example  .env.r2.example  .env.test  .env.tts.example  .gitignore  .replit  .workflows.toml  3_HERMETIC_CHECKS_COMPLETE.md  4_POINT_VERIFICATION_FIXES.md  6_CRITICAL_CHECKS.md  ACCEPTANCE_TESTS_4_SCENARIOS.md  AGENTLOCATOR_71_READY.md  AI_CALL_FLOW_REFACTOR_COMPLETE.md  AI_PROVIDER_ARCHITECTURE.md  AI_PROVIDER_SELECTION_SUMMARY.md  AI_STATUS_MATCHING_GUIDE.md  AI_TOGGLE_BUG_FIX.md  ANDROID_FIX_COMPLETE.md  ANDROID_FIX_CONFIRMATION.md  ANTI_DUPLICATE_SYSTEM_COMPLETE.md  API_404_FIX_README.md  API_404_FIX_SUMMARY.md  API_404_ROOT_CAUSE_FIX.md  API_404_TROUBLESHOOTING.md  APPOINTMENT_AND_BARGE_IN_FIX_SUMMARY.md  APPOINTMENT_AUTOMATION_DOCS.md  APPOINTMENT_AUTOMATION_UI_IMPLEMENTATION.md  APPOINTMENT_BOOKING_IMPLEMENTATION_COMPLETE.md  APPOINTMENT_CHANNELS_VERIFICATION.md  APPOINTMENT_EDIT_FIX_SUMMARY.md  APPOINTMENT_FIX_HE.md  APPOINTMENT_SETTINGS_FIX_SUMMARY.md  APPOINTMENT_SYSTEM_CLARIFICATION.md  APPOINTMENT_TOOLS_CRITICAL_FIX.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_REFACTOR_SUMMARY.md  ARI_FIX_COMPLETE_HE.md  ARI_SETUP.md  (+1756 more)
INVESTOR_READY/: 10_OUT_OF_10_COMPLETION.md  ARCHITECTURE_OVERVIEW.md  BACKEND_SANITY_REPORT.md  FRONTEND_SANITY_REPORT.md  LOAD_TEST_PLAN.md  PRODUCTION_READINESS.md  PROD_SMOKE_PROOF.md  QUALITY_GATE.md  RUNBOOK.md  SCALING_PLAN.md  SECURITY_AUDIT.md  SSOT_MAP.md
assets/: index-1vvcrEq-.js  index-7Kf5kY9B.css  index-B3griu1i.js  index-BEIe6iAZ.css  index-BFFoL9V5.js  index-BWF2FKA9.css  index-BgeiRuzB.css  index-BmYwaTRO.js  index-BnMbEsrB.js  index-BwnQjcIN.js  index-BzfXolyu.js  index-C-DFEyh0.js  index-CHbmCXoi.css  index-CSnMa8JX.js  index-CX7hjyWU.js  index-Cdjwuuc-.js  index-Cdxf8Qts.js  index-Cg7c9qhL.css  index-CgsJfK-d.js  index-CiVf1GQS.js  index-CjHh6Oxf.css  index-CnxET4H7.js  index-CoCsjhLi.js  index-CtKXd9YG.js  index-Cuvkqm1o.js  index-CxKc5ErA.js  index-D6-C8_jG.css  index-D8pBXyHw.css  index-DH8ymWap.css  index-DTxUfdpq.css  index-DV-wPMR7.js  index-DnK1YddA.js  index-DovoPK1b.js  index-DruCuSRM.css  index-DuE-FVzC.css  index-DyVlstY5.js  index-FpV36CRv.css  index-Qnr801mo.js  index-V3Lm3055.js  index-e9yMn6Fq.js  (+2 more)
assets-old-backup/: index-BM0YQulX.js
attached_assets/: AdminDashboard_1757009942374.jsx  Pasted---1754169841734_1754169841734.txt  Pasted---1754240304534_1754240304535.txt  Pasted---1754776168390_1754776168391.txt  Pasted---1755029123237_1755029123238.txt  Pasted---1755273720993_1755273720994.txt  Pasted---1756067020231_1756067020235.txt  Pasted---1756324447062_1756324447063.txt  Pasted---1756384027389_1756384027390.txt  Pasted---1756468595695_1756468595696.txt  Pasted---1756489788422_1756489788423.txt  Pasted---1756491428376_1756491428377.txt  Pasted---1756582189397_1756582189397.txt  Pasted---1756592591557_1756592591557.txt  Pasted---1756682402084_1756682402085.txt  Pasted---1756682655940_1756682655941.txt  Pasted---1756763390472_1756763390473.txt  Pasted---1756840864299_1756840864300.txt  Pasted---1756848108705_1756848108706.txt  Pasted---1756850555811_1756850555811.txt  Pasted---1756915119501_1756915119502.txt  Pasted---1756947717107_1756947717107.txt  Pasted---1756978574584_1756978574584.txt  Pasted---1757025969966_1757025969967.txt  Pasted---1757189082628_1757189082628.txt  Pasted---1757278131423_1757278131425.txt  Pasted---1757457777237_1757457777237.txt  Pasted---1757520393536_1757520393536.txt  Pasted---1757611379094_1757611379094.txt  Pasted---1757629345874_1757629345874.txt  Pasted---1758060523588_1758060523588.txt  Pasted---1758131251420_1758131251420.txt  Pasted---1759695972202_1759695972202.txt  Pasted---1760814923562_1760814923563.txt  Pasted---1760971000531_1760971000532.txt  Pasted---1760978694680_1760978694681.txt  Pasted---1761061516373_1761061516373.txt  Pasted---1761121153954_1761121153954.txt  Pasted---1761141566371_1761141566371.txt  Pasted---1761163135494_1761163135495.txt  (+1009 more)
auth-app/: package.json  tailwind.config.js  vite  vite.config.js
auth-frontend/: index.html  package.json  tailwind.config.js  vite.config.js
baileys-bridge/: index.js  package.json
baileys-service/: README.md  package.json  server.js
baileys_auth_info/: qr_code.txt
client/: .eslintrc.cjs  .prettierignore  AUDIT_ALLOWLIST.md  FRONTEND_SANITY_REPORT.md  TECH_DEBT.md  TODO_AUDIT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
dist-new/: index.html
docker/: nginx-ssl.conf  nginx.conf
docs/: BACKUP_RESTORE.md  DEPLOY_CHECKLIST.md  P3_CALLS_GUARDRAILS.md  PROD_GO_NO_GO.md  PUSH_NOTIFICATIONS.md
legacy/: DEBUG_STATUS.md  FINAL_SYSTEM_STATUS.md  PRODUCTION_STATUS.md  (+18 more)
(+1049 files in other folders)
