[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.10.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-seasurf>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "google-cloud-speech>=2.33.0",
    "google-cloud-texttospeech>=2.31.0",
    "hypercorn>=0.17.3",
    "openai>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "starlette>=0.48.0",
    "twilio>=9.8.3",
    "uvicorn[standard]>=0.37.0",
]
