[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.10.0",
    "beautifulsoup4>=4.12.0",  # For secure HTML parsing
    "bleach>=6.0.0",
    "boto3>=1.34.0",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-limiter>=3.5.0",  # Rate limiting for security
    "flask-login>=0.6.3",
    "flask-seasurf>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "google-cloud-speech>=2.33.0",
    "google-cloud-texttospeech>=2.31.0",
    "google-genai>=1.0.0",  # For Gemini TTS and AI (new unified SDK)
    "google-generativeai>=0.3.0",  # Legacy SDK - keeping for backward compatibility during migration (TODO: remove after full migration)
    "honcho>=2.0.0",
    "hypercorn>=0.17.3",
    "lxml>=5.0.0",  # Secure HTML parser for BeautifulSoup
    "numpy>=2.3.4",
    "openai>=2.2.0",
    "openai-agents>=0.4.2",
    "openpyxl>=3.1.5",
    "pillow>=10.0.0",
    "playwright>=1.48.0",  # For HTML→PNG rendering
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.24.0",  # For PDF thumbnail generation (fitz)
    "pypdf>=3.0.0",
    "pypdf2>=1.28.0",  # For PDF text extraction (legacy, but still works)
    "pdfminer.six>=20221105",  # Alternative PDF text extraction
    "pytz>=2025.2",
    "weasyprint>=62.0",  # For HTML to PNG conversion
    "html2image>=2.0.0",  # Alternative HTML to image
    "cryptography>=43.0.0",  # For token encryption
    "pywebpush>=1.14.0",
    "rapidfuzz>=3.14.3",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sendgrid>=6.11.0",
    "sqlalchemy>=2.0.43",
    "starlette>=0.48.0",
    "tinycss2>=1.3.0",
    "twilio>=9.8.3",
    "uvicorn[standard]>=0.37.0",
    "gunicorn>=23.0.0",  # Production WSGI/ASGI server
    "websockets>=13.0",
    "redis>=5.0.0",  # Redis client for queue management
    "rq>=2.0.0",  # Redis Queue for background jobs
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["tests*", "test-results*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Flask app context or database",
]
